--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 			<version>1.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.8.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
