--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,6 +6,8 @@ logging:
   level:
     root: debug
   config: classpath:profiles/log4j2/log4j2-dev.xml
+
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,3 +18,6 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.honda.interauto.dao
+
+baseconfigs:
+  zipFilePath: D:\work\idea\temp\file\interauto\zipFile
