--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -18,3 +18,6 @@ spring:
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.honda.interauto.dao
+
+baseconfigs:
+  zipFilePath: /opt/appl/interauto/zipFile
