--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,10 +12,10 @@ spring:
   datasource:
     dbauto:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.31.228:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
-#      jdbc-url: jdbc:mysql://10.83.16.13:3306/riskAuto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
-      username: auto #auto  riskAuto
-      password: 688451a #688451a  Ws2018!07@
+#      jdbc-url: jdbc:mysql://192.168.31.228:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      jdbc-url: jdbc:mysql://10.83.16.13:3306/riskAuto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      username: riskAuto #auto  riskAuto
+      password: Ws2018!07@ #688451a  Ws2018!07@
 
 #    dbtest:
 #      driver-class-name: com.mysql.cj.jdbc.Driver
@@ -29,3 +29,8 @@ mybatis:
 
 baseconfigs:
   zipFilePath: D:\work\idea\temp\file\interauto\zipFile
+
+redis:
+  hostName: 10.83.0.30
+  port: 6379
+  password: foobared
