--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -28,3 +28,8 @@ mybatis:
 
 baseconfigs:
   zipFilePath: /opt/appl/interauto/zipFile
+
+redis:
+  hostName: 10.83.0.30
+  port: 6379
+  password: foobared
