--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,6 +24,16 @@ spring:
       username: riskAuto  #auto   riskAuto
       password: Ws2018!07@ #688451a   Ws2018!07@
 
+  thymeleaf:
+      prefix: classpath:/templates/
+      check-template-location: true
+      suffix: .html
+      encoding: UTF-8
+      mode: html
+      cache: false
+      servlet:
+        content-type: text/html
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.honda.interauto.dao
