--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -22,6 +22,16 @@ spring:
       username: auto
       password: 688451a
 
+  thymeleaf:
+        prefix: classpath:/templates/
+        check-template-location: true
+        suffix: .html
+        encoding: UTF-8
+        mode: html
+        cache: false
+        servlet:
+          content-type: text/html
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.honda.interauto.dao
