--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,14 +12,14 @@ spring:
   datasource:
     dbauto:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.31.228:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      jdbc-url: jdbc:mysql://localhost:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
 #      jdbc-url: jdbc:mysql://10.83.16.13:3306/riskAuto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
       username: auto #auto  riskAuto
       password: 688451a #688451a  Ws2018!07@
 
     dbtest:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.31.228:3306/testtest?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      jdbc-url: jdbc:mysql://localhost:3306/testtest?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
 #      jdbc-url: jdbc:mysql://10.83.16.13:3306/riskAuto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
       username: auto  #auto   riskAuto
       password: 688451a #688451a   Ws2018!07@
