--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -12,13 +12,13 @@ spring:
   datasource:
     dbauto:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.31.228:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      jdbc-url: jdbc:mysql://localhost:3306/interauto?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
       username: auto
       password: 688451a
 
     dbtest:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://192.168.31.228:3306/testtest?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
+      jdbc-url: jdbc:mysql://localhost:3306/testtest?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT-8&useAffectedRows=true
       username: auto
       password: 688451a
 
@@ -42,7 +42,7 @@ baseconfigs:
   appiumScreenFile: /opt/appl/interauto/Screenshot/
 
 redis:
-  hostName: 10.83.0.30
+  hostName: localhost
   port: 6379
   password: foobared
 
